--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -23,19 +12,37 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+body{
+  background-color: #282c34;
+  color: rgb(7, 22, 35);
+  align-items: center;
+}
 
+.firstbutton{
+  color: aqua;
+  background-color: #282c34;
+}
+.secondbutton{
+  color: rgb(255, 29, 29);
+  padding: 20px;
+}
+
+.input_add{
+  padding: 50px;
+  background: #61dafb;
+}
 .App-link {
   color: #61dafb;
 }
 
-/* .App{
-  color: rebeccapurple;
-} */
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.task_delete{
+  margin: 10px 400px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.secondbutton ,.one{
+  padding: 20px;
+  margin: 10px;
 }
